# BundleSolver

./: .gitmodules  BundleSolver.cpp  BundleSolver.h  CHANGELOG.md  CMakeLists.txt  ParallelBundleSolver.cpp  ParallelBundleSolver.h  README.md  makefile  makefile-c  makefile-s
cmake/: BundleSolverConfig.cmake.in  FindClp.cmake  FindCoinUtils.cmake  FindGUROBI.cmake  FindOsi.cmake
test/: CMakeLists.txt  makefile  test.cpp
